Fifth commit. Fix third title align

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -46,6 +46,10 @@
 
     color: $mainColor;
 
+    &--important {
+      text-align: start;
+    }
+
     @include onTablet {
       font-size: 40px;
     }
@@ -54,4 +58,6 @@
       font-size: 48px;
     }
   }
+
+
 }
